// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test Button component Should match snapshot 1`] = `
<DocumentFragment>
  <button
    class="btn-0-2-3"
    type="button"
  >
    <span>
      test
    </span>
  </button>
</DocumentFragment>
`;

exports[`Test Button component Should match snapshot 2`] = `
<DocumentFragment>
  <button
    class="btn-0-2-3 test loading-0-2-2"
    type="submit"
  >
    <div
      class="wrap-0-2-5 spinner-0-2-4"
    >
      <img
        alt="spinner"
        class="img-0-2-6"
        src="/spinner.gif"
      />
    </div>
    <span>
      test
    </span>
  </button>
</DocumentFragment>
`;
